# sddm

./: CMakeLists.txt
data/themes/: CMakeLists.txt
data/themes/debian-maya/: README  metadata.desktop
debian/: changelog  control  rules  sddm-theme-debian-maya.install  sddm-theme-debian-maya.postinst  sddm-theme-debian-maya.prerm  sddm-theme-maya.postinst  sddm-theme-maya.prerm
services/: sddm.service.in
src/common/: Configuration.h  Session.cpp
